Galeel | UI Fix - Clinical >> Observation : Add more button alignment issue.

--- a/ui/app/styles/bahmni-components/_forms.scss
+++ b/ui/app/styles/bahmni-components/_forms.scss
@@ -50,6 +50,7 @@ form, .form {
         }
         .add-more {
             float: right;
+            margin-left: 5px;
         }
         textarea {
             height: 25px;
