--- a/ui/app/styles/bahmni-components/_templateController.scss
+++ b/ui/app/styles/bahmni-components/_templateController.scss
@@ -15,9 +15,8 @@
 		border-radius: 50%;
 		padding: 0;
 		font-size: 14px;
-		border-width: 3px;
 		border-color: darken($success, 12%);
-		box-shadow: 0 0 5px 2px rgba($lightGray, 0.5)
+		box-shadow: 0 0 0 2px $white;
 ;		i {
 			font-size: 1em;
 			lone-height: 1;
