--- a/ui/app/styles/bahmni-layout/_layout.scss
+++ b/ui/app/styles/bahmni-layout/_layout.scss
@@ -177,7 +177,7 @@ body {
     margin: 0px;
     min-height: 860px;
     width: 100%;
-    padding-top: 50px;
+    padding-top: 60px;
     padding-bottom: 30px;
 
     .opd-content-wrapper {
