--- a/ui/app/styles/clinical/_observationsDesktop.scss
+++ b/ui/app/styles/clinical/_observationsDesktop.scss
@@ -17,10 +17,6 @@ html.no-touch {
 		.form-horizontal fieldset label {
 			font-size: 12px;
 		}
-
-		.leaf-observation-node .comment-toggle {
-			margin-top: 5px;
-		}
 	}
 
 }
